--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/requirements-checker": "^2.0",
         "symfony/runtime": "7.0.*",
+        "symfony/twig-bundle": "7.0.*",
         "symfony/yaml": "7.0.*"
     },
     "require-dev": {
@@ -19,7 +21,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
-        "symfony/maker-bundle": "^1.57"
+        "symfony/maker-bundle": "*"
     },
     "config": {
         "allow-plugins": {
@@ -51,8 +53,10 @@
     },
     "scripts": {
         "auto-scripts": {
+            "vendor/bin/requirements-checker": "php-script",
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
