--- a/z hostingu/.envxxxx
+++ b/z hostingu/.envxxxx
@@ -25,8 +25,8 @@ APP_SECRET=6d25d396bc38afe96ce2ebb447e0d2d9
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
  #DATABASE_URL="mysql://symfony:symfony@127.0.0.1:3306/symfony?serverVersion=8.0.32&charset=utf8mb4"
- DATABASE_URL="mysql://symfony:symfony@proj12-mysql-1:3306/symfony?serverVersion=8.0.32&charset=utf8mb4"
- #DATABASE_URL="mysql://lightgregor_ps12:Em77bark!@lightgregor_ps12:3306/lightgregor_ps12?serverVersion=8.0.32&charset=utf8mb4"
-#DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://symfony:symfony@proj12-mysql-1:3306/symfony?serverVersion=8.0.32&charset=utf8mb4"
+ DATABASE_URL="mysql://lightgregor_ps12:Em77bark!@lightgregor_ps12:3306/lightgregor_ps12?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
